[gd_scene load_steps=36 format=3 uid="uid://bjix7njo4yn5q"]

[ext_resource type="Script" path="res://scripts/world/player/player.gd" id="1_oymro"]
[ext_resource type="PackedScene" uid="uid://c3qe77negmxe1" path="res://scenes/world/players/characters/000/men.tscn" id="2_c5jrr"]
[ext_resource type="Script" path="res://scripts/world/player/camera/camera.gd" id="5_4oo86"]
[ext_resource type="Script" path="res://scripts/world/player/state/animations/idle.gd" id="5_b30u5"]
[ext_resource type="Script" path="res://scripts/world/player/state/machine.gd" id="5_cwyba"]
[ext_resource type="Script" path="res://scripts/world/player/state/animations/walk.gd" id="6_llefj"]
[ext_resource type="Script" path="res://scripts/world/player/state/animations/run.gd" id="7_sl2sr"]
[ext_resource type="Script" path="res://scripts/world/player/state/animations/jump.gd" id="8_oh24n"]
[ext_resource type="Script" path="res://scripts/world/player/state/animations/fall.gd" id="9_3gvhe"]
[ext_resource type="Animation" uid="uid://k625lg5i303f" path="res://assets/actions/player/men/base/stand_idle.res" id="9_fsyne"]
[ext_resource type="Script" path="res://scripts/world/player/state/base.gd" id="10_8ln7y"]
[ext_resource type="Animation" uid="uid://dk0yds3yfnl2b" path="res://assets/actions/player/men/base/stand_to_jump_up.res" id="10_a8uh0"]
[ext_resource type="Animation" uid="uid://b2h0bddtps141" path="res://assets/actions/player/men/base/stand_to_walk.res" id="11_5vwiu"]
[ext_resource type="Animation" uid="uid://bmhur5c7eyfx3" path="res://assets/actions/player/men/base/stand_to_run.res" id="12_l8oxw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t16k0"]
height = 1.85

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8mr7o"]
_data = {
&"stand_idle": ExtResource("9_fsyne"),
&"stand_to_jump_up": ExtResource("10_a8uh0"),
&"stand_to_run": ExtResource("12_l8oxw"),
&"stand_to_walk": ExtResource("11_5vwiu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8sy3o"]
animation = &"land/stand_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3gvhe"]
animation = &"land/stand_to_jump_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8ln7y"]
animation = &"land/stand_to_run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e1mmi"]
animation = &"land/stand_to_walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7vdt0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5dvia"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n34hd"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sf47w"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mqhlv"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qujho"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wi8m1"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4djbt"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oijek"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ocdnx"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vk5he"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yjj6t"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jnphx"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_y220l"]
states/End/position = Vector2(978, 100)
states/Idle/node = SubResource("AnimationNodeAnimation_8sy3o")
states/Idle/position = Vector2(399, 100)
states/Jump/node = SubResource("AnimationNodeAnimation_3gvhe")
states/Jump/position = Vector2(796, 100)
states/Run/node = SubResource("AnimationNodeAnimation_8ln7y")
states/Run/position = Vector2(590, 239.222)
states/Walk/node = SubResource("AnimationNodeAnimation_e1mmi")
states/Walk/position = Vector2(590, -57.7783)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_7vdt0"), "Walk", "Run", SubResource("AnimationNodeStateMachineTransition_5dvia"), "Run", "Walk", SubResource("AnimationNodeStateMachineTransition_n34hd"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_sf47w"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_mqhlv"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_qujho"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_wi8m1"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_4djbt"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_oijek"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_ocdnx"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_vk5he"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_yjj6t"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_jnphx")]
graph_offset = Vector2(31, -128.778)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_kvc7e"]
graph_offset = Vector2(-149.46, -54.4621)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_y220l")
nodes/StateMachine/position = Vector2(200, 140)
nodes/output/position = Vector2(620, 80)
node_connections = [&"output", 0, &"StateMachine"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_oymro")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0)
shape = SubResource("CapsuleShape3D_t16k0")

[node name="Character" type="Node3D" parent="."]

[node name="Model" parent="Character" instance=ExtResource("2_c5jrr")]

[node name="CameraArm" type="SpringArm3D" parent="."]
transform = Transform3D(-1, -6.18173e-08, 6.18173e-08, 0, 0.707107, 0.707107, -8.74228e-08, 0.707107, -0.707107, 0, 1.3, 0)
collision_mask = 0
spring_length = 10.0

[node name="Camera" type="Camera3D" parent="CameraArm"]
script = ExtResource("5_4oo86")

[node name="StateMachine" type="Node3D" parent="." node_paths=PackedStringArray("state_base")]
script = ExtResource("5_cwyba")
state_base = NodePath("Idle")

[node name="Idle" type="Node3D" parent="StateMachine" node_paths=PackedStringArray("player_node")]
script = ExtResource("5_b30u5")
player_node = NodePath("../..")

[node name="Walk" type="Node3D" parent="StateMachine" node_paths=PackedStringArray("player_node")]
script = ExtResource("6_llefj")
player_node = NodePath("../..")

[node name="Run" type="Node3D" parent="StateMachine" node_paths=PackedStringArray("player_node")]
script = ExtResource("7_sl2sr")
player_node = NodePath("../..")

[node name="Jump" type="Node3D" parent="StateMachine" node_paths=PackedStringArray("player_node")]
script = ExtResource("8_oh24n")
player_node = NodePath("../..")

[node name="Fall" type="Node3D" parent="StateMachine" node_paths=PackedStringArray("player_node")]
script = ExtResource("9_3gvhe")
player_node = NodePath("../..")
metadata/_custom_type_script = ExtResource("10_8ln7y")

[node name="ActionPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Character/Model")
libraries = {
&"land": SubResource("AnimationLibrary_8mr7o")
}
autoplay = "land/stand_idle"

[node name="ActionPlayerTree" type="AnimationTree" parent="."]
root_node = NodePath("../Character/Model")
tree_root = SubResource("AnimationNodeBlendTree_kvc7e")
anim_player = NodePath("../ActionPlayer")
